# validator_task

./: .gitignore  README.md  pyproject.toml
.github/workflows/: github-actions.yaml
scripts/: ci  coverage_report  mypy.ini  pycode.cfg  pylintrc  run-format-checker  stylecheck  typecheck  unittest
tests/: test_validator.py
validator_task/: __init__.py  validator.py
