[tool.poetry]
name = "validator-task"
version = "0.1.0"
description = ""
authors = ["eliteGoblinRB <elitegoblinrb@gmail.com>"]
readme = "README.md"
packages = [{include = "validator_task"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "22.3.0"
ipdb = "0.13.7"
isort = "5.8.0"
mypy = "1.1.1"
pycodestyle = "2.7.0"
pytest = "6.2.4"
pytest-cov = "2.12.1"
pytest-randomly = "3.8.0"
tox = "3.24.3"
twine = "3.4.2"
pylint = "2.14.1"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
